--- a/style.css
+++ b/style.css
@@ -1,3 +1,164 @@
-#canvas {
-    border: 1px solid black;
+:root {
+    --globalLeft: 100px;
+}
+
+#stickman {
+    position: absolute;
+    left: var(--globalLeft);
+}
+
+#head {
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    left: -10px;
+    background-color: black;
+    border-radius: 100%;
+    animation: idle 3s infinite;
+}
+
+#body {
+    position: absolute;
+    height: 200px;
+    width: 30px;
+    left: 15px;
+    top: 30px;
+    background-color: black;
+    animation: idle 3s infinite;
+}
+
+#bodyEnd {
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    left: 15px;
+    top: 215px;
+    background-color: black;
+    border-radius: 100%;
+    animation: idle 3s infinite;
+}
+
+#leftLegUp {
+    position: absolute;
+    height: 100px;
+    width: 20px;
+    right: 2px;
+    top: 220px;
+    rotate: 45deg;
+    background-color: black;
+}
+
+#rightLegUp {
+    position: absolute;
+    height: 100px;
+    width: 20px;
+    left: 62px;
+    top: 220px;
+    rotate: -45deg;
+    background-color: black;
+}
+
+#leftLegUpEnd {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    right: 37px;
+    top: 295px;
+    background-color: black;
+    border-radius: 100%;
+}
+
+#rightLegUpEnd {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    left: 97px;
+    top: 295px;
+    background-color: black;
+    border-radius: 100%;
+}
+
+#leftLegDown {
+    position: absolute;
+    height: 100px;
+    width: 20px;
+    right: 44px;
+    top: 300px;
+    rotate: 10deg;
+    background-color: black;
+}
+
+#rightLegDown {
+    position: absolute;
+    height: 100px;
+    width: 20px;
+    left: 104px;
+    top: 300px;
+    rotate: -10deg;
+    background-color: black;
+}
+
+#leftFoot {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    right: 53px;
+    top: 389px;
+    background-color: black;
+    border-radius: 100%;
+}
+
+#rightFoot {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    left: 113px;
+    top: 389px;
+    background-color: black;
+    border-radius: 100%;
+}
+
+#leftUpperArm {
+    position: absolute;
+    height: 60px;
+    width: 15px;
+    left: 40px;
+    top: 110px;
+    rotate: -25deg;
+    background-color: black;
+}
+
+#leftUpperArmEnd {
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    left: 52px;
+    top: 158px;
+    background-color: black;
+    border-radius: 100%;
+}
+
+#rightUpperArm {
+    position: absolute;
+    height: 60px;
+    width: 15px;
+    left: 50px;
+    top: 100px;
+    rotate: -55deg;
+    background-color: black;
+}
+
+#rightUpperArmEnd {
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    left: 75px;
+    top: 140px;
+    background-color: black;
+    border-radius: 100%;
+}
+
+@keyframes idle {/*
+    50% {transform: translateY(60px);}
+    100% {transform: translateY(0px);}*/
 }
